tests/ui/compare-method/region-extra-2.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region-extra-2.rs:9:53
   |
LL |     fn renew<'b: 'a>(self) -> &'b mut [T];
   |     -------------------------------------- definition of `renew` from trait
...
LL |     fn renew<'b: 'a>(self) -> &'b mut [T] where 'a: 'b {
   |                                                     ^^ impl has extra requirement `'a: 'b`
   |
help: copy the `where` clause predicates from the trait
   |
LL -     fn renew<'b: 'a>(self) -> &'b mut [T] where 'a: 'b {
LL +     fn renew<'b: 'a>(self) -> &'b mut [T] where 'b: 'a {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0276`.
